--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,3 +24,13 @@
         @apply max-w-sm p-6 md:p-8 space-y-4 bg-white rounded-2xl shadow-3xl shadow-blue-shadow;
     }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type='number'] {
+    -moz-appearance: textfield;
+}
